[package]
name = "MissionControl_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.0.8", features=["derive"]}
eframe = "0.23.0"
egui = "0.23.0"
egui_dock = "0.8.0"
egui_plot = "0.23.0"
serialport = "4.2.2"
struct_iterable = "0.1.1"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
