[package]
name = "visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rerun = "0.12.1"
serialport = "4.2.2"
eframe = "0.23.0"
egui = "0.23.0"
egui_dock = "0.8.0"
egui_plot = "0.23.0"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.8"